--- a/Counter Project.vcxproj
+++ b/Counter Project.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Counter Project.cpp" />
+    <ClCompile Include="counterType.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="counterType.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
